<resources>
    <string name="app_name">ServiceFinder</string>
    <string name="registerBtn">Înregistrare</string>
    <string name="loginBtn">Conectare</string>
    <string name="app_description">Gasește cel mai apropiat service și fă o programare sau cere o ofertă direct din aplicație.</string>
    <string name="email">Emailul tau..</string>
    <string name="password">Parola ta..</string>
    <string name="passwordCode">******</string>
    <string name="fullName">Numele tau..</string>
    <string name="rePassword">Reintrodu parola..</string>
    <string name="menuHomeButton">Acasă</string>
    <string name="menuProfileButton">Profilul meu</string>
    <string name="menuSeeRequestOffer">Vezi cererile de ofertă</string>
    <string name="menuLogoutButton">Deconectare</string>
    <string name="searchButton">Caută..</string>
    <string name="filterResult">Filtrează..</string>
    <string name="headerMenuImage">Image</string>
    <string name="headerMenuUsername">Username</string>
    <string name="headerMenuMail">Email</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="serviceLogo">Logo sau o imagine</string>
    <string name="serviceName">Nume service</string>
    <string name="serviceDescription">Descriere</string>
    <string name="serviceDescriptionFull">Descrierea service-ului in mai multe caractere Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</string>
    <string name="distanceFromYou">Distanta fața de locația curentă</string>
    <string name="address">Adresă service</string>
    <string name="ratingMin">Rating minim:</string>
    <string name="ratingMax">Rating maxim:</string>
    <string name="nameFilter">Nume service:</string>
    <string name="addressFilter">Adresă:</string>
    <string name="serviceTypeFilter">Servicii oferite:</string>
    <string name="cityFilter">Oraș:</string>
    <string name="resetFilter">Resetează filtre</string>
    <string name="workingTime">o sa fie schimbat</string>
    <string name="viewComments">Comentarii</string>
    <string name="leaveComment">Lasă un comentariu</string>
    <string name="contactEmail">testEmail@yahoo.com</string>
    <string name="phoneNumber">07XXXXXXXX</string>
    <string name="addAppointment">Programează-te</string>
    <string name="seeAllComments">Toate</string>
    <string name="userProfileImageComment">User profile image</string>
    <string name="deleteMyComment">Șterge</string>
    <string name="usernameComment">Comment owner</string>
    <string name="comment">Comentariu Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt  ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.</string>
    <string name="commentDate">Dată adaugarii</string>
    <string name="requestOffer">Cere ofertă</string>
    <string name="withMyParts">Cu piesele mele</string>
    <string name="requestTextLabel">Ce trebuie facut la mașină:</string>
    <string name="carType">Mașină:</string>
    <string name="carModel">Model:</string>
    <string name="carYear">Anul fabricației:</string>
    <string name="carVin">VIN:</string>
    <string name="menuAuthButton">Autentificare</string>
    <string name="menuMyServices">Service-urile mele</string>
    <string name="menuMyRequestsAndMyAppointments">Cererile și programările mele</string>
    <string name="tabMyRequestsOffer">Cererile mele</string>
    <string name="tabMyAppointments">Programările mele</string>
    <string name="appointmentHour">08:00</string>
    <string name="appointmentOwnerOrService">Schedule Owner</string>
    <string name="appointmentOwnerOrServicePhone">0712345678</string>
    <string name="appointmentShortDescription">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed dolore magna aliqua. Ut enim ad minim veniam, quis nostrud</string>
    <string name="phone">Nr. tău de telefon..</string>
    <string name="todaySchedule">Programarile pe azi</string>
    <string name="offerRequest">Cereri de oferta</string>
    <string name="editService">Editează service</string>
    <string name="currentDay">Luni, 30 dec 2019</string>
    <string name="servicePhone">Nr. tel. service</string>
    <string name="serviceEmail">Email service</string>
    <string name="serviceDescriptionAdd">Descriere</string>
    <string name="acceptedBrand">Branduri acceptate</string>
    <string name="repairService">Service</string>
    <string name="serviceTire">Vulcanizare</string>
    <string name="serviceChassis">Tinichigerie</string>
    <string name="offeredServices">Servicii oferite</string>
    <string name="acceptedBrands">Branduri acceptate: BMW, Mercedes, Grupul VAG, BMW, Mercedes, Grupul VAG, BMW, Mercedes, Grupul VAG</string>
    <string name="wrongCredidentials">Parolă sau email greșit</string>
    <string name="loadMore">Incarcă mai mult</string>
    <string name="city">Oraș service</string>
    <string name="serviceItp">ITP</string>
    <string name="newEmail">Email</string>
    <string name="newPhone">Nr. de telefon</string>
    <string name="newFullName">Numele tău</string>
    <string name="newRePassword">Reintrodu noua parolă</string>
    <string name="newPasword">Noua parolă</string>
    <string name="newOldPassword">Introdu vechea parolă</string>
    <string name="appointmentType">Tipul Programarii: </string>
    <string name="requestText">Lorem Ipsum este pur şi simplu o machetă pentru text a industriei tipografice. Lorem Ipsum a fost macheta</string>
    <string name="userOrService">User/Service</string>
    <string name="withUserParts">Cu piesele clientului:</string>
    <string name="servicePriceResponse">Preț:</string>
    <string name="serviceFixEndDate">Dată ieșire</string>
    <string name="serviceFixStartDate">Dată intrare:</string>
    <string name="serviceAcceptance">Cerere acceptată/respinsă:</string>
    <string name="userAcceptance">Ofertă acceptată/respinsă:</string>
    <string name="carAllDetails">Toate detaliile, mașină model an vin</string>
    <string name="serviceResponse">Raspunsul service-ului, dată de intrare, ieșire din service si prețul</string>
    <string name="accept">Ok</string>
    <string name="decline">Refuză</string>
    <string name="delete">Șterge</string>
    <string name="coin">Lei</string>
    <string name="distanceFilter">Distanța maximă:</string>
    <string name="distanceUnit">Km</string>
    <string name="noRequest">Nu ai făcut nicio cerere de ofertă! Mergi pe pagina service-ului și accesează butonul de cerere din meniu pentru a face una!</string>
    <string name="noAppointment">Înca nu ai făcut nicio programare! Mergi pe pagina service-ului și accesează butonul de programare din meniu pentru a adăuga una!</string>
    <string name="openCommentsPage">Vezi comentarii</string>
    <string name="openOfferRequestsPage">Cereri de ofertă</string>
    <string name="openTodaySchedulePage">Programări pe azi</string>
    <string name="priceService">Preț Lei/h</string>
    <string name="priceTire">Preț schimb anvelope</string>
    <string name="priceChassis">Preț Lei/h</string>
    <string name="priceItp">Preț ITP</string>
    <string name="prices">Prețuri: Service: preț, Vulcanizare: preț, Tinichigerie: preț, ITP: preț</string>
    <string name="hasRequest">Vezi cererile</string>
    <string name="appointmentDay">2020-02-01</string>
    <string name="emailRegistered">Acest email a fost deja înregistrat</string>
</resources>
