<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/userProfileImageCommentCV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:elevation="8dp"
        app:cardCornerRadius="15dp">

        <ImageView
            android:id="@+id/userProfileImage"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/userProfileImageComment" />
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/userProfileImageCommentCV"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/ownerUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:text="@string/usernameComment" />

            <RatingBar
                android:id="@+id/commentRating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_toStartOf="@id/commentDate"
                android:progressTint="@color/colorGolden" />


            <TextView
                android:id="@+id/commentDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp"
                android:text="@string/commentDate" />


        </RelativeLayout>

        <TextView
            android:id="@+id/comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/comment" />
    </LinearLayout>

    <TextView
        android:id="@+id/deleteMyComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/userProfileImageCommentCV"
        android:layout_alignParentStart="true"
        android:textColor="@color/colorRed"
        android:layout_marginStart="10dp"
        android:text="@string/deleteMyComment" />
</RelativeLayout>